--- a/index.html
+++ b/index.html
@@ -1,62 +1,135 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 <head>
-  <!-- Required meta tags -->
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-   <!-- Bootstrap CSS -->
-   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-   <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>HitoshiZukeran Portforio</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
 
   <title>Original Site</title>
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">自己紹介サイト</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-  
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Dropdown
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Something else here</a>
-          </div>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#">Disabled</a>
-        </li>
-      </ul>
-    </div>
+  <header>
+    <nav class="navbar navbar-expand-sm navbar-dark bg-info navbar-default fixed-top">
+      <a class="navbar-brand" href="#" ><i class="fas fa-guitar"></i></i>HitoshiZukeran</a>
+      <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarNav">
+          <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav mr-auto">
+              <li class="nav-item">
+                  <a class="nav-link js-scroll-trriger" href="#profile-area">Profile</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="#hobby-area">Hobby</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="#photo-area">Photo</a>
+              </li>
+          </ul>
+          <ul class="navbar-nav">
+              <li class="nav-item">
+                  <a class="nav-link" href="https://github.com/HitoshiMbp"><i class="fab fa-github"></i></a>
+              </li>
+          </ul>
+      </div>
+
   </nav>
+  </header>
 
+  <!--プロフィール-->
+  <div class="container-fluid mx-auto text-center about-contents" id="profile-area">
+    <h1>Profire</h1>
+    <img class="img-thumbnail mt-5 mb-5" src="img/icon01.png" width="200px">
+    <div class="row">
+      <div class="col-sm">
+        <div class="about-text">
+            <h3>Name</h3>
+            <p>HitoshiZukeran</p>
+        </div>
+      </div>
+      <div class="col-sm">
+        <div class="about-text">
+            <h3>Hometown</h3>
+            <p>沖縄(Okinawa)</p>
+        </div>
+      </div>
+      <div class="col-sm">
+        <div class="about-text">
+            <h3>Age</h3>
+            <p>21(1999.07.14)</p>
+        </div>
+      </div>
+    </div>
+  </div>
+<!--趣味-->
+  <div class="container-fluid mx-auto text-center about-hobby" id="hobby-area">
+    <h1>Hobby</h1>
+      <div class="row"><!--rowクラス横並びにできる-->
+        <div class="col-md-4 col-12"> <!--col列-->
+          <img class="img-fluid" src="img/hobby01.png"><!--img-fluid横幅合わせ" -->
+        <p>ギターを弾くこと</p>
+        </div>
+        <div class="col-md-4 col-12"> <!--col列-->
+          <img class="img-fluid" src="img/hobby02.png">
+        <p>ライブ遠征</p>
+        </div>
+        <div class="col-md-4 col-12"> <!--col列-->
+          <img class="img-fluid" src="img/hobby03.png">
+        <p>旅行</p>
+        </div>
+      </div>
 
-
-
-
-
-
-
-
-
-
+</div>
+</div>
+<!--写真-->
+<div class="container-fluid mx-auto text-center about-photo" id="photo-area">
+  <h1>Photo</h1>
+        <!--スライドショー-->
+  <div class="keyvisual">
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="img/photo01.png" class="d-block w-100" alt="">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>所有ギター</h5>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="img/hobby01.png" class="d-block w-100" alt="">
+          <div class="carousel-caption d-none d-md-block">
+          <h5>ライブの時の写真</h5>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="img/photo02.png" class="d-block w-100" alt="">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>所属しているNMCサークル</h5>
+        </div>
+       </div>
+      </div>
+      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+    </div>
 
   <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    
     <script
     src="https://code.jquery.com/jquery-3.5.1.js"
     integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
